--- a/clientes/templates/person_form.html
+++ b/clientes/templates/person_form.html
@@ -1,3 +1,6 @@
+{% load bootstrap %}
+
+
 <!DOCTYPE html>
 <html lang="pt_Br">
     {% load static %}
@@ -14,16 +17,24 @@
         
     </header>
 
-    <main>
-        <p>Esta é uma página de exemplo em Django com cores azul e laranja.</p>
-        <button id="actionButton">Clique Aqui</button>        
-                   
-         <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %} 
-            {{ form }}
-            <button type="submit">Salvar</button>
-        </form>
-         
+    <main>    
+        <div class="container">
+                        
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %} 
+                {{ form|bootstrap }}         
+
+            # or use with individual field
+            {{ form.<field name>|bootstrap }} - To output individual fields
+
+            # For horizontal forms
+            {{ form|bootstrap_horizontal }}
+
+            # Or with custom size (default is 'col-lg-2 col-sm-2')
+            {{ form|bootstrap_horizontal:'col-lg-4' }}
+                        <button type="submit" class="btn btn-primary">Salvar</button>
+            </form>
+        </div> 
     </main>
 
    
